minor: some commits